api/src/main/java/com/example/api/error/DataNotSaved.java
package com.example.api.error;

public class DataNotSaved extends Exception{
    public DataNotSaved(String message) {
        super(message);
    }
}
